@@ -1,0 +1,8 @@
+[Desktop Entry]
+Encoding=UTF-8
+Icon=preferences-desktop-default-applications
+_Name=Default Web Browser (Xfce)
+Type=Application
+X-Terminal-Binaries=exo-open
+X-Terminal-Category=WebBrowser
+X-Terminal-Command=%B --launch WebBrowser "%u"
