@@ -1,0 +1,8 @@
+[Desktop Entry]
+Encoding=UTF-8
+Icon=preferences-desktop-default-applications
+_Name=Default Mail Reader (Xfce)
+Type=Application
+X-Terminal-Binaries=exo-open
+X-Terminal-Category=MailReader
+X-Terminal-Command=%B --launch MailReader "%u"
