@@ -1,3 +1,9 @@
+2006-02-06	Benedikt Meurer <benny@xfce.org>
+
+	* helpers/Makefile.am, helpers/exo-open-browser.desktop.in,
+	  helpers/exo-open-mailer.desktop.in: Add support for exo-open to
+	  the helper framework.
+
 2006-01-28	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/Makefile.am: Be sure to include <config.h> in
